fixed the amica logo on mobile view

--- a/main/main.css
+++ b/main/main.css
@@ -123,10 +123,10 @@ header {
   transform: translate(-100%);
 }
 .dashboard--logo > img {
-  margin-top: 15px;
-  width: 7.25rem;
-  margin-left: 1.25rem;
-  margin-bottom: 30px;
+  margin-top: 3px;
+  width: 6rem;
+  margin-left: 2rem;
+  margin-bottom: 10px;
 }
 .d-flex img {
   width: 1rem;
@@ -523,6 +523,12 @@ label.validation-error {
     grid-column: 1/2;
     grid-row: 1/3;
     width: 240px;
+  }
+  .dashboard--logo > img {
+    margin-top: 15px;
+    width: 7.25rem;
+    margin-left: 1.25rem;
+    margin-bottom: 30px;
   }
   header {
     grid-column: 2/3;
